fix: delete z-index

--- a/src/widgets/header/ui/nav/catalog/categories/categories.module.scss
+++ b/src/widgets/header/ui/nav/catalog/categories/categories.module.scss
@@ -17,7 +17,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  z-index: 100;
   box-shadow: var(--categories-shadow);
 }
 
